# RinKokonoe

./: .env  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  README.md.remote  config.toml  docker-compose.yml  go.mod  setup.bat  setup.sh
.github/workflows/: ci.yml  debug.yml
cmd/: main.go
internal/cloud/: rclone.go
internal/config/: config.go
internal/database/: database.go
internal/discord/: discord.go
migrations/: 20250529000001_create_coupons_table.sql
modules/infopulse/: infopulse.go
modules/specter/: specter.go
modules/validator/: validator.go
scripts/: deploy.sh  setup.sh
src/: config.rs  db.rs  discord.rs  main.rs  models.rs  scheduler.rs  scraper.rs  validator.rs
